feat(backend): add backend and user login

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>React Ask App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="text/javascript"> window.initialData = {{initialData}};</script>
 </head>
 <body>
-  <div id="react-root"></div>
+  <div id="react-root">{{body}}</div>
   <script type="text/javascript" src="{%=o.htmlWebpackPlugin.assets.main%}"></script>
 </body>
 
