--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,26 @@
 </head>
 <body>
   <div id="react-root">{{body}}</div>
+  <div id="fb-root"></div>
+  <script>
+  window.fbAsyncInit = function() {
+    FB.init({ appId: '374167926074848', xfbml: true, version: 'v2.2' });
+    // appId: '374258546065786', status: true, cookie: true, xfbml: true});
+  };
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+  // (function() {
+  // var e = document.createElement('script'); e.async = true;
+  // e.src = document.location.protocol +
+  // '//connect.facebook.net/en_US/all.js';
+  // document.getElementById('fb-root').appendChild(e);
+  // }());
+  </script>
   <script type="text/javascript" src="{%=o.htmlWebpackPlugin.assets.main%}"></script>
 </body>
 
