--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Noto+Sans">
+  <link rel="stylesheet" href="/assets/main.css">
   <title>市長給問嗎！最後一役 政策問答大亂鬥</title>
   <meta content="市長給問嗎！最後一役 政策問答大亂鬥" property="og:site_name" />
   <meta content="市長給問嗎！最後一役 政策問答大亂鬥" property="og:title" />
@@ -18,7 +20,6 @@
   <script>
   window.fbAsyncInit = function() {
     FB.init({ appId: '374167926074848', xfbml: true, version: 'v2.2' });
-    // appId: '374258546065786', status: true, cookie: true, xfbml: true});
   };
   (function(d, s, id){
      var js, fjs = d.getElementsByTagName(s)[0];
@@ -27,27 +28,19 @@
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-  // (function() {
-  // var e = document.createElement('script'); e.async = true;
-  // e.src = document.location.protocol +
-  // '//connect.facebook.net/en_US/all.js';
-  // document.getElementById('fb-root').appendChild(e);
-  // }());
   </script>
   <script type="text/javascript" src="{%=o.htmlWebpackPlugin.assets.main%}"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-   <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-48524226-14', 'auto');
-      ga('require', 'displayfeatures');
-      ga('require', 'linkid', 'linkid.js');
-      ga('send', 'pageview');
-
-    </script>
+    ga('create', 'UA-48524226-14', 'auto');
+    ga('require', 'displayfeatures');
+    ga('require', 'linkid', 'linkid.js');
+    ga('send', 'pageview');
+  </script>
 </body>
 
 </html>
