--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="/assets/main.css">
   <title>市長給問嗎！最後一役 政策問答大亂鬥</title>
   <meta content="市長給問嗎！最後一役 政策問答大亂鬥" property="og:site_name" />
-  <meta content="市長給問嗎！最後一役 政策問答大亂鬥" property="og:title" />
-  <meta content="看了政見有滿腹疑問，想要進一步追問或釐清？覺得政策不可行，想要挑戰候選人？「市長給問嗎！最後一役」，邀請你把所有還來不及說出口的疑問和質疑一次提出！" property="og:description"/>
-  <meta content="//2014final.wethepeople.tw/assets/images/fb_img.jpg" property="og:image" />
+  <meta content="{{title}}" property="og:title" />
+  <meta content="{{description}}" property="og:description"/>
+  <meta content="http://2014final.wethepeople.tw/assets/images/fb_img.jpg" property="og:image" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript"> window.initialData = {{initialData}};</script>
 </head>
