Lee change text. add images.

--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Noto+Sans">
   <link rel="stylesheet" href="/assets/main.css">
-  <title>市長給問嗎！最後一役 政策問答大亂鬥</title>
-  <meta content="市長給問嗎！最後一役 政策問答大亂鬥" property="og:site_name" />
+  <title>李前市長給問嗎？</title>
+  <meta content="李前市長給問嗎？" property="og:site_name" />
   <meta content="{{title}}" property="og:title" />
   <meta content="{{description}}" property="og:description"/>
   <meta content="http://2014final.wethepeople.tw/assets/images/fb_img.jpg" property="og:image" />
@@ -28,6 +28,7 @@
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
+  
   </script>
   <script type="text/javascript" src="{%=o.htmlWebpackPlugin.assets.main%}"></script>
   <script>
