fix fb img link

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <meta content="李前市長給問嗎？" property="og:site_name" />
   <meta content="{{title}}" property="og:title" />
   <meta content="{{description}}" property="og:description"/>
-  <meta content="http://2014final.wethepeople.tw/assets/images/fb_img.jpg" property="og:image" />
+  <meta content="http://lee.wethepeople.tw/assets/images/fb_img.jpg" property="og:image" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript"> window.initialData = {{initialData}};</script>
 </head>
